# String-Calculator-C

./: .gitignore  CMakeLists.txt  README.md  review.sh
src/: calculator.c  calculator.h  delim_parser.c  delim_parser.h
tests/: test_main.c
